name:                biocad
version:             0.1.0.0
author:              Andrey Gonchar
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimpleServer
  other-modules:       Data
                     , Routes
                     , Type
  build-depends:       base >= 4.8 && < 5
                     , hasbolt
                     , scotty
                     , wai-extra
                     , resource-pool
                     , transformers
                     , mtl
                     , text
                     , data-default
                     , aeson
                     , containers
  default-language:    Haskell2010

executable biocad
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hasbolt
                     , biocad
                     , mtl
  default-language:    Haskell2010
